--- a/app/src/main/res/layout/activity_classroom.xml
+++ b/app/src/main/res/layout/activity_classroom.xml
@@ -53,10 +53,11 @@
                 android:background="@color/white"
                 android:visibility="gone">
 
-            <LinearLayout android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:layout_gravity="center"
-                          android:orientation="vertical">
+            <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="vertical">
 
                 <TextView
                         android:id="@+id/tip_title_view"
@@ -84,12 +85,48 @@
                 android:id="@+id/main_panel"
                 layout="@layout/layout_classroom_panel"/>
 
+        <!--图片涂鸦-->
         <FrameLayout
-                android:id="@+id/video_edit_layout"
+                android:id="@+id/photo_doodle_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
         </FrameLayout>
+
+        <!--文档管理-->
+        <FrameLayout
+                android:id="@+id/document_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+        </FrameLayout>
+
+        <!--视频播放-->
+        <FrameLayout
+                android:id="@+id/video_play_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+        </FrameLayout>
+
+        <!--消息入口-->
+        <LinearLayout
+                android:id="@+id/right_panel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|bottom"
+                android:orientation="horizontal">
+
+            <cn.xiaojs.xma.ui.widget.MessageImageView
+                    android:id="@+id/enter_talk_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/px20"
+                    android:layout_centerInParent="true"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/cr_msg"/>
+
+        </LinearLayout>
 
     </FrameLayout>
 
