--- a/app/src/main/res/layout/fragment_video_editing.xml
+++ b/app/src/main/res/layout/fragment_video_editing.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/main_bg"
+                android:clickable="true">
 
     <!--白板,本地手绘-->
     <cn.xiaojs.xma.ui.classroom.whiteboard.WhiteboardLayout
             android:id="@+id/white_board_layout"
             android:background="#FAEEEEEE"
             android:layout_width="match_parent"
+            android:visibility="gone"
             android:layout_height="match_parent"/>
+
+    <!--白板列表-->
+    <cn.xiaojs.xma.ui.classroom.whiteboard.WhiteboardScrollerView
+            android:id="@+id/white_board_scrollview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:visibility="gone">
+    </cn.xiaojs.xma.ui.classroom.whiteboard.WhiteboardScrollerView>
 
     <!--视频涂鸦面板-->
     <RelativeLayout
