--- a/app/src/main/res/layout/layout_classroom_panel.xml
+++ b/app/src/main/res/layout/layout_classroom_panel.xml
@@ -5,7 +5,7 @@
         android:layout_height="match_parent"
         android:background="@android:color/transparent">
 
-    <LinearLayout
+    <!--<LinearLayout
             android:id="@+id/right_panel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -22,7 +22,7 @@
                 android:layout_alignParentRight="true"
                 android:src="@drawable/cr_msg"/>
 
-    </LinearLayout>
+    </LinearLayout>-->
 
     <!--视频推流顶部面板-->
     <RelativeLayout
