--- a/app/src/main/res/layout/layout_image_viewer.xml
+++ b/app/src/main/res/layout/layout_image_viewer.xml
@@ -4,6 +4,14 @@
              android:layout_height="match_parent"
              android:orientation="vertical">
 
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="正在加载..."
+            android:textSize="@dimen/font_26px"
+            android:textColor="@color/font_white"
+            android:layout_gravity="center"
+            />
     <cn.xiaojs.xma.ui.widget.scaleimage.PhotoView
             android:id="@+id/drag_image_viewer"
             android:layout_width="match_parent"
