--- a/app/src/main/res/layout/layout_material_item.xml
+++ b/app/src/main/res/layout/layout_material_item.xml
@@ -27,7 +27,10 @@
                 android:layout_centerInParent="true"
                 android:src="@drawable/ic_arrow_down"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                />
 
         <LinearLayout
                 android:layout_toRightOf="@+id/material_item_image"
