--- a/app/src/main/res/layout/fragment_cls_video_player.xml
+++ b/app/src/main/res/layout/fragment_cls_video_player.xml
@@ -63,8 +63,7 @@
                 android:minHeight="@dimen/px2"
                 android:thumbOffset="@dimen/px7"
                 android:foregroundGravity="center_vertical"
-                android:thumb="@null"
-                android:clickable="false"
+                android:thumb="@drawable/live_progress_controller"
                 android:progressDrawable="@drawable/live_progress_bar"/>
 
 
