--- a/app/src/main/res/layout/lcim_chat_item_left_layout.xml
+++ b/app/src/main/res/layout/lcim_chat_item_left_layout.xml
@@ -34,11 +34,25 @@
             android:layout_alignParentTop="true"
             android:layout_marginRight="10dp"/>
 
+
+        <TextView
+                android:id="@+id/chat_left_tv_name"
+                android:layout_width="45dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="3dp"
+                android:layout_marginTop="3dp"
+                android:ellipsize="end"
+                android:gravity="left"
+                android:singleLine="true"
+                android:layout_alignLeft="@id/chat_left_iv_avatar"
+                android:layout_below="@+id/chat_left_iv_avatar"/>
+
         <LinearLayout
             android:id="@+id/chat_left_layout_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="4dp"
             android:layout_toRightOf="@+id/chat_left_iv_avatar"
             android:orientation="horizontal"
             android:paddingRight="40dp"/>
@@ -73,13 +87,4 @@
         </FrameLayout>
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/chat_left_tv_name"
-        android:layout_width="45dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="3dp"
-        android:layout_marginTop="3dp"
-        android:ellipsize="end"
-        android:gravity="left"
-        android:singleLine="true"/>
 </LinearLayout>
