--- a/app/src/main/res/layout/lcim_chat_item_right_layout.xml
+++ b/app/src/main/res/layout/lcim_chat_item_right_layout.xml
@@ -62,7 +62,8 @@
             android:id="@+id/chat_right_layout_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="4dp"
             android:layout_toLeftOf="@+id/chat_right_iv_avatar"
             android:orientation="horizontal"
             android:paddingLeft="40dp">
@@ -74,16 +75,21 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:layout_marginLeft="10dp"/>
+
+        <TextView
+                android:id="@+id/chat_right_tv_name"
+                android:layout_width="45dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginBottom="3dp"
+                android:layout_marginTop="3dp"
+                android:ellipsize="end"
+                android:gravity="right"
+                android:singleLine="true"
+                android:layout_below="@id/chat_right_iv_avatar"
+                android:layout_alignRight="@id/chat_right_iv_avatar"/>
+
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/chat_right_tv_name"
-        android:layout_width="45dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginBottom="3dp"
-        android:layout_marginTop="3dp"
-        android:ellipsize="end"
-        android:gravity="right"
-        android:singleLine="true"/>
+
 </LinearLayout>
