--- a/app/src/main/res/layout/fragment_cls_video_player.xml
+++ b/app/src/main/res/layout/fragment_cls_video_player.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:videoplayer="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/main_bg"
@@ -12,7 +13,8 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:visibility="gone"
-            android:background="@color/black"/>
+            android:background="@color/black"
+            videoplayer:play_mode="video" />
 
     <ImageView
             android:id="@+id/back"
