bug 827 #2-我授的课，机构开设的直播课，没有展示主讲和助教信息，参照UI

--- a/app/src/main/res/layout/layout_teach_lesson_item.xml
+++ b/app/src/main/res/layout/layout_teach_lesson_item.xml
@@ -87,6 +87,7 @@
                         android:layout_alignParentRight="true"
                         android:layout_centerInParent="true"
                         android:layout_width="wrap_content"
+                        android:visibility="gone"
                         android:layout_height="wrap_content">
 
                     <TextView
@@ -97,11 +98,14 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"/>
 
-                    <cn.xiaojs.xma.ui.widget.flow.ImageFlowLayout
+                    <LinearLayout
                             android:id="@+id/assistants"
+                            android:layout_marginLeft="@dimen/px10"
                             android:layout_gravity="center_vertical"
+                            android:orientation="horizontal"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content">
+                    </LinearLayout>
                 </LinearLayout>
 
                 <TextView
