--- a/app/src/main/res/layout/activity_select_subject.xml
+++ b/app/src/main/res/layout/activity_select_subject.xml
@@ -26,7 +26,7 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/add"
+                android:text="@string/add_subject"
                 android:drawableLeft="@drawable/ic_subject_add"
                 android:drawablePadding="@dimen/px10"
                 android:textSize="@dimen/px28"
