Signed-off-by: Maxb <maxb@jyzblm.com>

--- a/app/src/main/res/layout/lcim_chat_item_right_layout.xml
+++ b/app/src/main/res/layout/lcim_chat_item_right_layout.xml
@@ -86,6 +86,8 @@
                 android:ellipsize="end"
                 android:gravity="right"
                 android:singleLine="true"
+                android:textColor="@color/font_dark_gray"
+                android:textSize="@dimen/font_26px"
                 android:layout_below="@id/chat_right_iv_avatar"
                 android:layout_alignRight="@id/chat_right_iv_avatar"/>
 
