--- a/app/src/main/res/layout/lcim_chat_item_left_layout.xml
+++ b/app/src/main/res/layout/lcim_chat_item_left_layout.xml
@@ -44,6 +44,8 @@
                 android:ellipsize="end"
                 android:gravity="left"
                 android:singleLine="true"
+                android:textColor="@color/font_dark_gray"
+                android:textSize="@dimen/font_26px"
                 android:layout_alignLeft="@id/chat_left_iv_avatar"
                 android:layout_below="@+id/chat_left_iv_avatar"/>
 
