--- a/app/src/main/res/layout/activity_guide_browse.xml
+++ b/app/src/main/res/layout/activity_guide_browse.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/root_layout"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/black">
 
 
     <ImageView
@@ -10,6 +11,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
+            android:scaleType="fitCenter"
             />
 
     <ImageButton
