--- a/app/src/main/res/layout/layout_classroom_panel.xml
+++ b/app/src/main/res/layout/layout_classroom_panel.xml
@@ -5,25 +5,6 @@
         android:layout_height="match_parent"
         android:background="@android:color/transparent">
 
-    <!--<LinearLayout
-            android:id="@+id/right_panel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:orientation="horizontal">
-
-        <cn.xiaojs.xma.ui.widget.MessageImageView
-                android:id="@+id/enter_talk_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/px20"
-                android:layout_centerInParent="true"
-                android:layout_alignParentRight="true"
-                android:src="@drawable/cr_msg"/>
-
-    </LinearLayout>-->
-
     <!--视频推流顶部面板-->
     <RelativeLayout
             android:id="@+id/publish_video_panel"
@@ -76,356 +57,29 @@
 
     </RelativeLayout>
 
-    <RelativeLayout
-            android:id="@+id/top_panel"
-            android:layout_alignParentTop="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+    <include layout="@layout/layout_classroom_panel_top"/>
+    <include layout="@layout/layout_classroom_panel_left"/>
+    <include layout="@layout/layout_classroom_panel_bottom"
+             android:visibility="gone"/>
 
-        <RelativeLayout
-                android:id="@+id/title_bar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="@dimen/px5"
-                android:paddingBottom="@dimen/px5"
-                android:background="@color/classroom_main_gray">
-
-            <ImageView
-                    android:id="@+id/back_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_alignParentLeft="true"
-                    android:paddingLeft="@dimen/px50"
-                    android:paddingRight="@dimen/px30"
-                    android:paddingTop="@dimen/px20"
-                    android:paddingBottom="@dimen/px20"
-                    android:src="@drawable/ic_back_pressed"/>
-
-            <ImageView
-                    android:id="@+id/play_pause_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:paddingLeft="@dimen/px30"
-                    android:paddingRight="@dimen/px30"
-                    android:paddingTop="@dimen/px20"
-                    android:paddingBottom="@dimen/px20"
-                    android:visibility="gone"
-                    android:layout_toRightOf="@+id/back_btn"
-                    android:src="@drawable/ic_cr_start"/>
-
-            <ImageView
-                    android:id="@+id/finish_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:paddingLeft="@dimen/px30"
-                    android:paddingRight="@dimen/px30"
-                    android:paddingTop="@dimen/px20"
-                    android:paddingBottom="@dimen/px20"
-                    android:visibility="gone"
-                    android:layout_toRightOf="@+id/play_pause_btn"
-                    android:src="@drawable/ic_cr_exit"/>
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_toRightOf="@+id/finish_btn"
-                    android:layout_toLeftOf="@+id/contact_btn"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                <TextView
-                        android:id="@+id/lesson_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/white"
-                        android:layout_gravity="center"
-                        android:textSize="@dimen/font_30px"/>
-
-                <TextView
-                        android:id="@+id/reset_time"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/white"
-                        android:layout_marginTop="@dimen/px4"
-                        android:textSize="@dimen/font_20px"
-                        android:visibility="gone"/>
-            </LinearLayout>
-
-            <ImageView
-                    android:id="@+id/contact_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:paddingLeft="@dimen/px30"
-                    android:paddingRight="@dimen/px30"
-                    android:paddingTop="@dimen/px20"
-                    android:paddingBottom="@dimen/px20"
-                    android:layout_toLeftOf="@+id/notify_msg_btn"
-                    android:src="@drawable/ic_cr_contact_book"/>
-
-            <cn.xiaojs.xma.ui.widget.MessageImageView
-                    android:id="@+id/notify_msg_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:paddingLeft="@dimen/px30"
-                    android:paddingRight="@dimen/px30"
-                    android:paddingTop="@dimen/px20"
-                    android:paddingBottom="@dimen/px20"
-                    android:layout_toLeftOf="@+id/setting_btn"
-                    android:src="@drawable/ic_cr_notice"/>
-
-
-            <ImageView
-                    android:id="@+id/setting_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:paddingLeft="@dimen/px30"
-                    android:paddingRight="@dimen/px30"
-                    android:paddingTop="@dimen/px20"
-                    android:paddingBottom="@dimen/px20"
-                    android:layout_alignParentRight="true"
-                    android:src="@drawable/ic_cr_setting"/>
-
-        </RelativeLayout>
-
-        <LinearLayout
-                android:id="@+id/live_progress_layout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="@dimen/px18"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center_vertical"
-                android:layout_below="@+id/title_bar"
-                android:layout_centerHorizontal="true"
-                android:background="@drawable/cr_corner_gray_bg">
-
-            <TextView
-                    android:id="@+id/count_time"
-                    android:textColor="@color/font_white"
-                    android:textSize="@dimen/font_20px"
-                    android:layout_width="wrap_content"
-                    android:paddingTop="@dimen/px20"
-                    android:paddingBottom="@dimen/px20"
-                    android:paddingLeft="@dimen/px15"
-                    android:text="00:00:00"
-                    android:layout_height="wrap_content"/>
-
-            <SeekBar
-                    android:id="@+id/live_progress"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/px12"
-                    android:layout_marginRight="@dimen/px12"
-                    android:maxHeight="@dimen/px2"
-                    android:minHeight="@dimen/px2"
-                    android:thumbOffset="@dimen/px7"
-                    android:foregroundGravity="center_vertical"
-                    android:thumb="@null"
-                    android:clickable="false"
-                    android:progressDrawable="@drawable/live_progress_bar"/>
-
-
-            <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                <TextView
-                        android:id="@+id/total_time"
-                        android:textColor="@color/font_white"
-                        android:textSize="@dimen/font_20px"
-                        android:layout_width="wrap_content"
-                        android:paddingRight="@dimen/px15"
-                        android:layout_height="wrap_content"/>
-
-                <TextView
-                        android:id="@+id/delay_time"
-                        android:textColor="@color/font_red"
-                        android:textSize="@dimen/font_20px"
-                        android:layout_width="wrap_content"
-                        android:visibility="gone"
-                        android:paddingRight="@dimen/px15"
-                        android:layout_height="wrap_content"/>
-
-            </LinearLayout>
-        </LinearLayout>
-    </RelativeLayout>
-
-    <LinearLayout
-            android:id="@+id/left_panel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="@dimen/px20"
-            android:layout_marginLeft="@dimen/px16"
-            android:orientation="vertical">
-
-        <TextView
-                android:id="@+id/whiteboard_coll_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center"
-                android:textSize="@dimen/font_20px"
-                android:paddingLeft="@dimen/px15"
-                android:paddingRight="@dimen/px15"
-                android:textColor="@color/white"
-                android:visibility="gone"
-                android:background="@drawable/ic_cr_tips_bg"/>
-
-        <ImageView
-                android:id="@+id/blackboard_switcher_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/cr_blackboard_switcher"/>
-
-        <ImageView
-                android:id="@+id/course_ware_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/px40"
-                android:src="@drawable/cr_teaching_switcher"/>
-
-
-        <ImageView
-                android:id="@+id/qa_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/cr_qa"
-                android:layout_marginTop="@dimen/px40"
-                android:visibility="gone"/>
-
-        <ImageView
-                android:id="@+id/wb_toolbar_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/cr_more"
-                android:layout_marginTop="@dimen/px40"/>
-
-    </LinearLayout>
-
-
-    <LinearLayout
-            android:id="@+id/bottom_panel"
+    <!--<LinearLayout
+            android:id="@+id/right_panel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/px20"
-            android:background="@drawable/cr_corner_gray_bg"
-            android:paddingLeft="@dimen/px20"
-            android:paddingRight="@dimen/px20"
+            android:layout_alignParentRight="true"
             android:orientation="horizontal">
 
-        <ImageView
-                android:id="@+id/main_screen_setting"
+        <cn.xiaojs.xma.ui.widget.MessageImageView
+                android:id="@+id/enter_talk_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/px20"
-                android:layout_marginRight="@dimen/px40"
-                android:src="@drawable/cr_main_screen"/>
+                android:layout_centerInParent="true"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/cr_msg"/>
 
-        <ImageView
-                android:id="@+id/wb_coordination_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/px20"
-                android:visibility="gone"
-                android:layout_marginRight="@dimen/px40"/>
-
-        <ImageView
-                android:id="@+id/share_white_board_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/px20"
-                android:visibility="gone"
-                android:layout_marginRight="@dimen/px40"/>
-
-        <ImageView
-                android:id="@+id/save_white_board_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/cr_save_whiteboard"
-                android:padding="@dimen/px20"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-            android:id="@+id/white_board_panel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/px20"
-            android:visibility="gone"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:background="@drawable/wb_conner_bg">
-
-        <ImageView
-                android:id="@+id/select_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/px25"
-                android:src="@drawable/wb_selection_selector"/>
-
-        <ImageView
-                android:id="@+id/handwriting_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/wb_brush_selector"
-                android:padding="@dimen/px25"/>
-
-        <ImageView
-                android:id="@+id/shape_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/px25"/>
-
-        <ImageView
-                android:id="@+id/eraser_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/wb_eraser_selector"
-                android:padding="@dimen/px25"/>
-
-        <ImageView
-                android:id="@+id/text_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/wb_text_selector"
-                android:padding="@dimen/px25"/>
-
-        <cn.xiaojs.xma.ui.classroom.whiteboard.widget.CircleView
-                android:id="@+id/color_picker_btn"
-                android:layout_width="@dimen/px40"
-                android:layout_height="@dimen/px40"
-                android:layout_marginLeft="@dimen/px25"
-                android:layout_marginRight="@dimen/px25"/>
-
-        <ImageView
-                android:id="@+id/undo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/wb_undo_selector"
-                android:padding="@dimen/px25"/>
-
-        <ImageView
-                android:id="@+id/redo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/wb_redo_selector"
-                android:padding="@dimen/px25"/>
-
-    </LinearLayout>
+    </LinearLayout>-->
 
     <!--视频采集view-->
     <ImageView
