--- a/app/src/main/res/layout/activity_material.xml
+++ b/app/src/main/res/layout/activity_material.xml
@@ -27,6 +27,19 @@
                     android:src="@drawable/back_arrow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
+            <Button
+                    android:id="@+id/choice_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="@dimen/px32"
+                    android:paddingRight="@dimen/px32"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerInParent="true"
+                    android:text="@string/choice_all"
+                    android:textSize="@dimen/font_26px"
+                    android:background="@android:color/transparent"
+                    android:textColor="@drawable/orange_click_text_selector"
+                    android:visibility="gone"/>
 
             <TextView
                     android:id="@+id/material_middle_view"
@@ -37,6 +50,8 @@
                     android:layout_centerInParent="true"
                     android:textColor="@color/def"/>
 
+
+
             <ImageView
                     android:id="@+id/material_right_image"
                     android:paddingLeft="@dimen/px30"
@@ -46,19 +61,32 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerInParent="true"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone"/>
+                    android:layout_height="wrap_content"/>
 
             <ImageView
                     android:id="@+id/material_right_image2"
                     android:paddingLeft="@dimen/px30"
-                    android:paddingRight="@dimen/px30"
                     android:paddingTop="@dimen/px16"
                     android:paddingBottom="@dimen/px16"
+                    android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@id/material_right_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="visible"/>
+
+            <Button
+                    android:id="@+id/cancel_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="@dimen/px30"
+                    android:paddingRight="@dimen/px30"
                     android:layout_alignParentRight="true"
                     android:layout_centerInParent="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:text="@string/cancel"
+                    android:textSize="@dimen/font_26px"
+                    android:background="@android:color/transparent"
+                    android:textColor="@drawable/orange_click_text_selector"
+                    android:visibility="gone"/>
 
             <!--<ImageView-->
                     <!--android:id="@+id/material_right_image2"-->
