隐藏移动联系人功能

--- a/app/src/main/res/layout/layout_contact_group_child.xml
+++ b/app/src/main/res/layout/layout_contact_group_child.xml
@@ -15,7 +15,7 @@
             android:layout_height="match_parent"
             android:orientation="horizontal"
             android:gravity="center_vertical">
-        <Button
+        <!--<Button
                 android:id="@+id/move_contact"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -24,7 +24,7 @@
                 android:background="@drawable/big_submit_btn_selector"
                 android:padding="8dp"
                 android:text="@string/move_contact"
-                />
+                />-->
         <Button
                 android:id="@+id/del_contact"
                 android:layout_width="wrap_content"
