--- a/app/src/main/res/layout/common_popup_menu_item.xml
+++ b/app/src/main/res/layout/common_popup_menu_item.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/txView"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:clickable="false"
-    android:drawablePadding="@dimen/px12"
-    android:gravity="center_vertical|left"
-    android:paddingBottom="@dimen/px17"
-    android:paddingTop="@dimen/px17"
-    android:singleLine="true"
-    android:textColor="@drawable/common_btn_white_text_selector"
-    android:textSize="@dimen/font_26px" />
+          android:id="@+id/txView"
+          android:layout_width="match_parent"
+          android:layout_height="@dimen/px100"
+          android:clickable="false"
+          android:drawablePadding="@dimen/px24"
+          android:gravity="center"
+          android:paddingLeft="@dimen/px30"
+          android:paddingRight="@dimen/px30"
+          android:singleLine="true"
+          android:textColor="@drawable/common_btn_black_text_selector"
+          android:textSize="@dimen/font_30px"/>
