--- a/app/src/main/res/layout/fragment_live.xml
+++ b/app/src/main/res/layout/fragment_live.xml
@@ -1,47 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipe_ly"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <LinearLayout
+
+    <ScrollView
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:scrollbars="none">
+
         <LinearLayout
-                android:id="@+id/title"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/px88"
-                android:background="@color/white"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <RelativeLayout
-                    android:id="@+id/s_root"
+            <LinearLayout
+                    android:id="@+id/title"
                     android:layout_width="match_parent"
-                    android:layout_marginLeft="@dimen/px30"
-                    android:layout_marginRight="@dimen/px30"
-                    android:background="@drawable/grey_conner_bg"
-                    android:layout_gravity="center_vertical"
-                    android:layout_height="@dimen/px60"
-                    android:clickable="true">
+                    android:layout_height="@dimen/px88"
+                    android:background="@color/white"
+                    android:orientation="horizontal">
 
-                <TextView
-                        android:id="@+id/my_course_search"
+                <RelativeLayout
+                        android:id="@+id/s_root"
+                        android:layout_width="0dp"
+                        android:layout_marginLeft="@dimen/px30"
+                        android:layout_marginRight="@dimen/px30"
+                        android:background="@drawable/grey_conner_bg"
+                        android:layout_gravity="center_vertical"
+                        android:layout_height="@dimen/px60"
+                        android:clickable="true"
+                        android:layout_weight="1.0">
+
+                    <TextView
+                            android:id="@+id/my_course_search"
+                            android:layout_width="wrap_content"
+                            android:drawableLeft="@drawable/ic_search"
+                            android:layout_centerInParent="true"
+                            android:text="@string/home_search_hint"
+                            android:textColor="@color/search_gray"
+                            android:textSize="@dimen/font_28px"
+                            android:drawablePadding="@dimen/px10"
+                            android:gravity="center"
+                            android:layout_height="wrap_content"/>
+                </RelativeLayout>
+
+                <ImageButton
+                        android:id="@+id/btn_add"
                         android:layout_width="wrap_content"
-                        android:drawableLeft="@drawable/ic_search"
-                        android:layout_centerInParent="true"
-                        android:text="@string/home_search_hint"
-                        android:textColor="@color/search_gray"
-                        android:textSize="@dimen/font_28px"
-                        android:drawablePadding="@dimen/px10"
-                        android:gravity="center"
-                        android:layout_height="wrap_content"/>
-            </RelativeLayout>
+                        android:layout_height="match_parent"
+                        android:background="@android:color/transparent"
+                        android:src="@drawable/add_selector"
+                        android:layout_marginRight="@dimen/px25"/>
 
+            </LinearLayout>
+
+            <View style="@style/DividerHorizontal"/>
+
+            <include layout="@layout/layout_live_header"/>
         </LinearLayout>
-
-        <View style="@style/DividerHorizontal"/>
-
-        <include layout="@layout/layout_live_header"/>
-    </LinearLayout>
-</ScrollView>
+    </ScrollView>
+</android.support.v4.widget.SwipeRefreshLayout>
 
