首页框架调整完善工作，调整联系人、消息、个人主页入口以及对应功能

--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -9,6 +9,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/px90"
                     android:background="@color/white"
+        android:visibility="gone"
                     android:orientation="horizontal">
 
         <ImageView
@@ -53,7 +54,9 @@
                 />
     </RelativeLayout>
 
-    <View style="@style/DividerHorizontal"/>
+    <View
+        android:visibility="gone"
+        style="@style/DividerHorizontal"/>
 
     <!--<cn.xiaojs.xma.common.pulltorefresh.core.PullToRefreshSwipeListView-->
 
