--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,126 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <cn.xiaojs.xma.common.pulltorefresh.core.PullToRefreshSwipeListView
-            android:id="@+id/home_list"
-            android:paddingBottom="@dimen/px100"
-            android:scrollbars="none"
-            android:divider="@color/main_bg"
-            android:listSelector="@android:color/transparent"
-            android:background="@color/main_bg"
-            android:dividerHeight="@dimen/px30"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-    <LinearLayout
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/px88"
-            android:background="@drawable/ic_home_title_bg"
-            android:orientation="horizontal">
-
-        <RelativeLayout
-                android:id="@+id/home_search_wrapper"
-                android:layout_width="match_parent"
-                android:layout_marginLeft="@dimen/px29"
-                android:layout_marginRight="@dimen/px29"
-                android:background="@drawable/ic_search_bg"
-                android:layout_gravity="center_vertical"
-                android:layout_height="@dimen/px58">
-
-            <TextView
-                    android:id="@+id/home_search"
-                    android:layout_width="wrap_content"
-                    android:drawableLeft="@drawable/ic_search"
-                    android:layout_centerInParent="true"
-                    android:text="@string/home_search_hint"
-                    android:textColor="@color/search_gray"
-                    android:textSize="@dimen/font_25px"
-                    android:drawablePadding="@dimen/px10"
-                    android:gravity="center"
-                    android:layout_height="wrap_content"/>
-        </RelativeLayout>
-
-    </LinearLayout>
+        android:id="@+id/home_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/title"
+        android:background="@color/main_bg"
+        android:divider="@color/main_bg"
+        android:dividerHeight="@dimen/px30"
+        android:listSelector="@android:color/transparent"
+        android:paddingBottom="@dimen/px100"
+        android:scrollbars="none" />
 
     <RelativeLayout
-            android:id="@+id/home_moment_mark_wrapper"
-            android:background="@drawable/ic_home_moment_msg"
-            android:layout_alignParentTop="true"
-            android:layout_centerInParent="true"
-            android:visibility="gone"
-            android:layout_marginTop="@dimen/px360"
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/px88"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="@color/white"
+        android:orientation="vertical">
+
+        <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/px30"
+            android:gravity="center"
+            android:text="小圈"
+            android:textColor="@color/font_black"
+            android:textSize="@dimen/font_28px" />
+
+        <ImageView
+            android:id="@+id/iv_write_dynamic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:paddingBottom="@dimen/px16"
+            android:paddingLeft="@dimen/px30"
+            android:paddingRight="@dimen/px30"
+            android:paddingTop="@dimen/px16"
+            android:src="@drawable/write_dynamic_selector" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/home_moment_mark_wrapper"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/home_list"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="@dimen/px135"
+        android:background="@drawable/ic_home_moment_msg"
+        android:visibility="gone">
 
         <LinearLayout
-                android:orientation="horizontal"
-                android:layout_centerInParent="true"
-                android:paddingTop="@dimen/px20"
-                android:paddingBottom="@dimen/px20"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:orientation="horizontal"
+            android:paddingBottom="@dimen/px20"
+            android:paddingTop="@dimen/px20">
 
             <cn.xiaojs.xma.ui.widget.RoundedImageView
-                    android:layout_width="@dimen/px60"
-                    android:layout_height="@dimen/px60"
-                    app:oval="true"
-                    android:scaleType="fitXY"
-                    app:border_color="@color/white"
-                    app:border_width="@dimen/px1"
-                    android:src="@drawable/default_avatar_grey"/>
+                android:layout_width="@dimen/px60"
+                android:layout_height="@dimen/px60"
+                android:scaleType="fitXY"
+                android:src="@drawable/default_avatar_grey"
+                app:border_color="@color/white"
+                app:border_width="@dimen/px1"
+                app:oval="true" />
 
             <TextView
-                    android:id="@+id/home_moment_tip"
-                    android:drawableRight="@drawable/ic_relevant_white"
-                    android:drawablePadding="@dimen/px10"
-                    android:gravity="center"
-                    android:textColor="@color/white"
-                    android:layout_marginLeft="@dimen/px30"
-                    android:layout_gravity="center_vertical"
-                    android:textSize="@dimen/font_28px"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                android:id="@+id/home_moment_tip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/px30"
+                android:drawablePadding="@dimen/px10"
+                android:drawableRight="@drawable/ic_relevant_white"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:textSize="@dimen/font_28px" />
         </LinearLayout>
     </RelativeLayout>
 
     <LinearLayout
-            android:id="@+id/home_moment_mark_right_wrapper"
-            android:orientation="horizontal"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="@dimen/px360"
-            android:visibility="gone"
-            android:background="@drawable/mark_hover_bg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        android:id="@+id/home_moment_mark_right_wrapper"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/home_list"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="@dimen/px135"
+        android:background="@drawable/mark_hover_bg"
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <cn.xiaojs.xma.ui.widget.RoundedImageView
-                android:id="@+id/portrait"
-                android:layout_marginLeft="@dimen/px5"
-                android:layout_width="@dimen/px70"
-                android:layout_height="@dimen/px70"
-                android:layout_marginTop="@dimen/px5"
-                android:layout_marginBottom="@dimen/px5"
-                app:oval="true"
-                android:scaleType="fitXY"
-                app:border_color="@color/white"
-                app:border_width="@dimen/px1"
-                android:src="@drawable/default_avatar_grey"/>
+            android:id="@+id/portrait"
+            android:layout_width="@dimen/px70"
+            android:layout_height="@dimen/px70"
+            android:layout_marginBottom="@dimen/px5"
+            android:layout_marginLeft="@dimen/px5"
+            android:layout_marginTop="@dimen/px5"
+            android:scaleType="fitXY"
+            android:src="@drawable/default_avatar_grey"
+            app:border_color="@color/white"
+            app:border_width="@dimen/px1"
+            app:oval="true" />
 
         <TextView
-                android:id="@+id/home_right_moment_tip"
-                android:textColor="@color/white"
-                android:textSize="@dimen/font_28px"
-                android:layout_gravity="center_vertical"
-                android:layout_marginRight="@dimen/px10"
-                android:layout_marginLeft="@dimen/px10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+            android:id="@+id/home_right_moment_tip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/px10"
+            android:layout_marginRight="@dimen/px10"
+            android:textColor="@color/white"
+            android:textSize="@dimen/font_28px" />
     </LinearLayout>
 
 </RelativeLayout>
