--- a/app/src/main/res/layout/layout_personal_info.xml
+++ b/app/src/main/res/layout/layout_personal_info.xml
@@ -21,18 +21,18 @@
             android:background="#77000000"/>
 
     <ImageView
-            android:id="@+id/back_btn"
+            android:id="@+id/person_home"
             android:layout_gravity="left|top"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_back_pressed"
+            android:src="@drawable/pagehome_selector"
             android:paddingLeft="@dimen/px26"
             android:paddingRight="@dimen/px26"
             android:paddingTop="@dimen/px24"
-            android:visibility="gone"
+            android:visibility="visible"
             android:paddingBottom="@dimen/px20"/>
 
-    <TextView
+    <!--<TextView
             android:id="@+id/person_home"
             android:layout_gravity="right|top"
             android:layout_width="wrap_content"
@@ -43,7 +43,22 @@
             android:paddingRight="@dimen/px36"
             android:paddingTop="@dimen/px25"
             android:paddingBottom="@dimen/px18"
-            android:textSize="@dimen/font_28px"/>
+            android:textSize="@dimen/font_28px"/>-->
+
+    <!--R.drawable.message_tab_selector-->
+    <cn.xiaojs.xma.ui.widget.RedTipTextView
+        android:id="@+id/message_entrance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableTop="@drawable/message_btn_selector"
+        android:layout_gravity="right|top"
+        android:paddingLeft="@dimen/px26"
+        android:paddingRight="@dimen/px26"
+        android:paddingTop="@dimen/px24"
+        android:gravity="center"
+        android:textColor="@drawable/home_tab_text_selector"/>
+
+
 
     <LinearLayout
             android:orientation="vertical"
